# espeak-ng-example

./: CMakeLists.txt  README.md  boni.hpp  espeak-ng.hpp  main.cpp  sdl2.hpp
